デプロイ先追加

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,19 @@
 		</plugins>
 	</build>
 
+	<profiles>
+		<profile>
+			<id>local</id>
+			<distributionManagement>
+				<repository>
+					<id>local</id>
+					<name>local</name>
+					<url>file://var/mvn/repo</url>
+				</repository>
+			</distributionManagement>
+		</profile>
+	</profiles>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.google.auto</groupId>
