--- a/pom.xml
+++ b/pom.xml
@@ -68,5 +68,11 @@
 			<version>0.28</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>1.3.3.RELEASE</version>
+		</dependency>
 	</dependencies>
 </project>
