パッケージ名の変更

--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>net.duck8823</groupId>
+	<groupId>com.duck8823.generate-names</groupId>
 	<artifactId>generate-names</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 
 	<build>
 		<plugins>
