--- a/pom.xml
+++ b/pom.xml
@@ -48,11 +48,13 @@
 			<groupId>com.google.auto</groupId>
 			<artifactId>auto-common</artifactId>
 			<version>0.6</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.squareup</groupId>
 			<artifactId>javapoet</artifactId>
 			<version>1.7.0</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -78,6 +80,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>1.3.3.RELEASE</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
