--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.duck8823.generate-names</groupId>
+	<groupId>com.duck8823</groupId>
 	<artifactId>generate-names</artifactId>
 	<version>0.0.2</version>
 
