--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.github.duck8823</groupId>
 	<artifactId>generate-names</artifactId>
-	<version>0.0.5</version>
+	<version>0.0.6</version>
 
 	<build>
 		<plugins>
@@ -41,6 +41,11 @@
 			<artifactId>javapoet</artifactId>
 			<version>1.7.0</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>persistence-api</artifactId>
+			<version>1.0.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -59,13 +64,6 @@
 			<artifactId>truth</artifactId>
 			<version>0.28</version>
 			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<version>1.3.3.RELEASE</version>
-			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
